helloweb/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: helloweb
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: helloweb
  template:
    metadata:
      labels:
        app: helloweb
    spec:
      containers:
      - image: nginx:1.19.10-alpine
        name: helloweb
        ports:
        - containerPort: 80
