helloweb/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: helloweb
spec:
  ports:
  - port: 8080
    targetPort: 80
  selector:
    app: helloweb
