helloweb/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: helloweb-http-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  rules:
    - http:
        paths:
          - backend:
              serviceName: helloweb
              servicePort: 8080
      host: helloweb.localhost
